--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vue/language-server": "^2.2.10",
+    "@vue/typescript-plugin": "^2.2.10",
     "@vueuse/core": "^13.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
