--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -11,9 +11,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vue/language-server": "^2.2.10",
     "@vue/typescript-plugin": "^2.2.10",
     "@vueuse/core": "^13.2.0",
+    "i": "^0.3.7",
+    "npm": "^11.4.1",
+    "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
