--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -19,8 +19,10 @@
     "@vue/language-server": "^2.2.10",
     "@vue/typescript-plugin": "^2.2.10",
     "@vueuse/core": "^13.2.0",
+    "axios": "^1.10.0",
     "i": "^0.3.7",
     "npm": "^11.4.1",
+    "pinia": "^3.0.3",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
