issue: need to add 404 page, docker containers seem to run, but wont know the real story till release, in mobile view the project cards are a bit messed up with the image and ping animation happening

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,8 +46,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx-dev.conf:/etc/nginx/nginx.conf
-      # - ./nginx-prod.conf:/etc/nginx/nginx.conf
+      - ./nginx-dev.conf:/etc/nginx/nginx-dev.conf
+      # - ./nginx-prod.conf:/etc/nginx/nginx-prod.conf
       - ./frontend/ui/dist:/usr/share/nginx/html
     networks:
       - app-network
