issue: need to really think about nginx and how it's going to route all the traffic from the outside world.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,10 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     restart: always
-    env_file:
-      - ./backend/.env.dev
     # env_file:
-    #   - ./backend/.env.prod
+    #   - ./backend/.env.dev
+    env_file:
+      - ./backend/.env.prod
     depends_on:
       - redis
     ports:
@@ -33,6 +33,8 @@ services:
     depends_on:
       - backend
     restart: always
+    ports:
+      - 80:80
     networks:
       - app-network
 
@@ -44,10 +46,10 @@ services:
       - frontend
       - backend
     ports:
-      - 80:80
+      - 3000:3000
     volumes:
-      - ./nginx-dev.conf:/etc/nginx/nginx-dev.conf
-      # - ./nginx-prod.conf:/etc/nginx/nginx-prod.conf
+      # - ./nginx-dev.conf:/etc/nginx/nginx-dev.conf
+      - ./nginx-prod.conf:/etc/nginx/nginx-prod.conf
       - ./frontend/ui/dist:/usr/share/nginx/html
     networks:
       - app-network
