--- a/frontend/ui/Dockerfile
+++ b/frontend/ui/Dockerfile
@@ -10,5 +10,6 @@ RUN npm run build
 # production stage
 FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
+COPY nginx-prod.conf /etc/nginx/nginx.conf
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
