feat: added 404 page, commits are hidden when on mobile view, certain hover features are off when on mobile.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,10 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     restart: always
-    # env_file:
-    #   - ./backend/.env.dev
     env_file:
-      - ./backend/.env.prod
+      - ./backend/.env.dev
+    # env_file:
+    #   - ./backend/.env.prod
     depends_on:
       - redis
     ports:
