--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,7 @@ services:
     container_name: backend
     restart: always
     env_file:
-      - ./backend/.env.dev
-    # env_file:
-    #   - ./backend/.env.prod
+      - ./backend/.env.prod
     depends_on:
       - redis
     ports:
