feat: added more security for the nginx.conf for the frontend webserver to deny requests from bots

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     restart: always
+    # env_file:
+    #   - ./backend/.env.dev
     env_file:
       - ./backend/.env.prod
     depends_on:
