--- a/frontend/ui/Dockerfile
+++ b/frontend/ui/Dockerfile
@@ -11,5 +11,6 @@ RUN npm run build
 FROM nginx:stable-alpine AS production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 COPY nginx-prod.conf /etc/nginx/nginx.conf
+# COPY nginx-dev.conf /etc/nginx/nginx.conf
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
