--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -9,8 +9,8 @@ http {
     default_type application/octet-stream;
 
     # Rate limiting
-    # limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    # limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
 
     # Logging
     access_log /var/log/nginx/access.log;
@@ -21,6 +21,7 @@ http {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Cross-Origin-Resource-Policy "same-origin" always;
 
     # Gzip compression (Cloudflare will handle this too, but good to have)
     gzip on;
@@ -48,6 +49,19 @@ http {
     server {
         listen 3000;
         server_name saulgv.dev www.saulgv.dev;
+	server_tokens off;
+
+	add_header Content-Security-Policy "
+	  default-src 'self';
+	  script-src 'self' 'unsafe-inline';
+	  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+	  font-src 'self' https://fonts.gstatic.com;
+	  img-src 'self'  data: blob: https://ghchart.rshah.org/072460/saul178.svg;
+	  connect-src 'self' https://www.saulgv.dev;
+	  media-src 'self' blob:;
+	  object-src 'none';
+	  base-uri 'self';
+	" always;
 
 	# NOTE: this is to setup https connections, but i think cloudflare does this automatically??
 	# listen 443 ssl;
@@ -61,10 +75,20 @@ http {
 	# and it's fine???
         # set_real_ip_from 0.0.0.0/0;
 
+	if ($http_user_agent = "") {
+	    return 403;
+	}
+
+	# Block common script scanners and bots
+	if ($http_user_agent ~* (python-requests|curl|wget|libwww|HTTrack|nmap|sqlmap|masscan)) {
+	    return 403;
+	}
+
         # API routes with rate limiting
         location /api/ {
-            # limit_req zone=api burst=20 nodelay;
-            
+            limit_req zone=api burst=20 nodelay;
+	    limit_except GET HEAD { deny all; }
+
             proxy_pass http://backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -72,10 +96,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
             
-            # WebSocket support
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection "upgrade";
             
             # Timeouts
             proxy_connect_timeout 60s;
@@ -83,13 +103,18 @@ http {
             proxy_read_timeout 60s;
         }
 
+	location ~* /(wp-admin|wp-login|wp-content|wp-includes|xmlrpc\.php|\.php|\.env|setup\.config) {
+	    return 444;
+	}
+
         # Static files
         location / {
-            # limit_req zone=general burst=10 nodelay;
+            limit_req zone=general burst=10 nodelay;
             
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri $uri/ /index.html;
+	    limit_except GET HEAD { deny all; }
             
             # Cache static assets (Cloudflare will respect these headers)
             location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
@@ -98,15 +123,7 @@ http {
             }
         }
 
-        # Health check
-        # location /health {
-        #     access_log off;
-        #     return 200 "healthy\n";
-        #     add_header Content-Type text/plain;
-        # }
-
         # Error pages
-        error_page 404 /index.html;
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
             root /usr/share/nginx/html;
