--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -57,7 +57,7 @@ http {
 	  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
 	  font-src 'self' https://fonts.gstatic.com;
 	  img-src 'self'  data: blob: https://ghchart.rshah.org/072460/saul178.svg;
-	  connect-src 'self' https://www.saulgv.dev;
+	  connect-src 'self' http://www.saulgv.dev;
 	  media-src 'self' blob:;
 	  object-src 'none';
 	  base-uri 'self';
@@ -70,10 +70,6 @@ http {
         
         # Trust Cloudflare's forwarded headers
         real_ip_header CF-Connecting-IP;
-
-	# NOTE: supposedly this is unsafe and it should be cloudflares trusted ips?? but i can also not have this set 
-	# and it's fine???
-        # set_real_ip_from 0.0.0.0/0;
 
 	if ($http_user_agent = "") {
 	    return 403;
