feat: added more security for the nginx.conf for the frontend webserver to deny requests from bots

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -9,8 +9,8 @@ http {
     default_type application/octet-stream;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
+    # limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    # limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
 
     # Logging
     access_log /var/log/nginx/access.log;
@@ -82,7 +82,7 @@ http {
 
         # API routes with rate limiting
         location /api/ {
-            limit_req zone=api burst=20 nodelay;
+            # limit_req zone=api burst=20 nodelay;
 	    limit_except GET HEAD { deny all; }
 
             proxy_pass http://backend/;
@@ -105,7 +105,7 @@ http {
 
         # Static files
         location / {
-            limit_req zone=general burst=10 nodelay;
+            # limit_req zone=general burst=10 nodelay;
             
             root /usr/share/nginx/html;
             index index.html;
