debugging conf for prod

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -71,14 +71,14 @@ http {
         # Trust Cloudflare's forwarded headers
         real_ip_header CF-Connecting-IP;
 
-	# if ($http_user_agent = "") {
-	#     return 403;
-	# }
+	if ($http_user_agent = "") {
+	    return 403;
+	}
 
-	# Block common script scanners and bots
-	# if ($http_user_agent ~* (python-requests|curl|wget|libwww|HTTrack|nmap|sqlmap|masscan)) {
-	#     return 403;
-	# }
+	Block common script scanners and bots
+	if ($http_user_agent ~* (python-requests|curl|wget|libwww|HTTrack|nmap|sqlmap|masscan)) {
+	    return 403;
+	}
 
         # API routes with rate limiting
         location /api/ {
