debugging conf for prod

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -75,7 +75,7 @@ http {
 	    return 403;
 	}
 
-	Block common script scanners and bots
+	# Block common script scanners and bots
 	if ($http_user_agent ~* (python-requests|curl|wget|libwww|HTTrack|nmap|sqlmap|masscan)) {
 	    return 403;
 	}
