--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -51,17 +51,7 @@ http {
         server_name saulgv.dev www.saulgv.dev;
 	server_tokens off;
 
-	# add_header Content-Security-Policy "
-	#   default-src 'self';
-	#   script-src 'self' 'unsafe-inline';
-	#   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-	#   font-src 'self' https://fonts.gstatic.com;
-	#   img-src 'self'  data: blob: https://ghchart.rshah.org/072460/saul178.svg;
-	#   connect-src 'self' http://www.saulgv.dev;
-	#   media-src 'self' blob:;
-	#   object-src 'none';
-	#   base-uri 'self';
-	# " always;
+	add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://ghchart.rshah.org/072460/saul178.svg; connect-src 'self' https://www.saulgv.dev; media-src 'self' blob:; object-src 'none'; base-uri 'self';" always;
 
 	# NOTE: this is to setup https connections, but i think cloudflare does this automatically??
 	# listen 443 ssl;
