testing in prod baby

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -109,6 +109,10 @@ http {
             }
         }
 
+	location /assets/ {
+	    deny all;
+	}
+
         # Error pages
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
