feat: more security

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -110,7 +110,10 @@ http {
         }
 
 	location /assets/ {
-	    deny all;
+	    valid_referers none blocked saulgv.dev www.saulgv.dev;
+	    if ($invalid_referer) {
+		return 403;
+	    }
 	}
 
         # Error pages
