--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -9,8 +9,8 @@ http {
     default_type application/octet-stream;
 
     # Rate limiting
-    # limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    # limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
 
     # Logging
     access_log /var/log/nginx/access.log;
@@ -45,10 +45,17 @@ http {
         server backend:8080;
     }
 
+    server {
+	    listen 3000;
+	    server_name saulgv.dev;
+	    server_tokens off;
+	    return 301 https://www.saulgv.dev$request_uri
+    }
+
     # Main server block
     server {
         listen 3000;
-        server_name saulgv.dev www.saulgv.dev;
+        server_name www.saulgv.dev;
 	server_tokens off;
 
 	add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://ghchart.rshah.org/072460/saul178.svg; connect-src 'self' https://www.saulgv.dev; media-src 'self' blob:; object-src 'none'; base-uri 'self';" always;
@@ -72,7 +79,7 @@ http {
 
         # API routes with rate limiting
         location /api/ {
-            # limit_req zone=api burst=20 nodelay;
+            limit_req zone=api burst=20 nodelay;
 	    limit_except GET HEAD { deny all; }
 
             proxy_pass http://backend/;
@@ -95,7 +102,7 @@ http {
 
         # Static files
         location / {
-            # limit_req zone=general burst=10 nodelay;
+            limit_req zone=general burst=10 nodelay;
             
             root /usr/share/nginx/html;
             index index.html;
