fix:nginx error

--- a/frontend/ui/nginx-prod.conf
+++ b/frontend/ui/nginx-prod.conf
@@ -49,7 +49,7 @@ http {
 	    listen 3000;
 	    server_name saulgv.dev;
 	    server_tokens off;
-	    return 301 https://www.saulgv.dev$request_uri
+	    return 301 https://www.saulgv.dev$request_uri;
     }
 
     # Main server block
